<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:background= "#B8988E"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivgambar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="138dp"
        android:background="#ccc"
        android:src="@drawable/ic_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:id="@+id/met1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_name"
            android:hint="@string/username"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met2"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_mata"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met3"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/fullname"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_fullname"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met4"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/birth_date"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_birthday"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met5"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/address"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_address"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met6"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/hobby"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_game"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met7"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/partner_criteria"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_partner"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met8"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/phone_number"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_phone"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/met9"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/gender"
            android:background="@drawable/custom"
            android:drawableStart="@drawable/ic_gender"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btnChooseSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btnChoose"
            android:onClick="clickCancel"
            android:textStyle="bold"
            android:textSize="15dp"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:backgroundTint="#B57A67"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30px"/>

        <Button
            android:id="@+id/btnSubmit"
            android:onClick="clickSubmit"
            android:textStyle="bold"
            android:textSize="15dp"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="20dp"
            android:backgroundTint="#B57A67"
            android:layout_marginLeft="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

    </LinearLayout>
</LinearLayout>

</ScrollView>